# pwmidicontrol

./: .gitignore  CMakeLists.txt  README.md  config.pwm  main.cpp
include/: config.h  control.h  midi.h  structs.h
src/: config.cpp  control.cpp  main.cpp  midi.cpp
